need to fix nav on mobile

--- a/src/components/BottomRow/BottomRow.css
+++ b/src/components/BottomRow/BottomRow.css
@@ -32,7 +32,7 @@
   #bottomContainer {
     width: 100%;
     display: grid;
-    grid-template: 1fr / 1fr 1.25fr 1fr;
+    grid-template: 1fr / 1fr 1.48fr 1fr;
     place-items: center;
   }
   #bottomText {
@@ -45,6 +45,7 @@
   }
   #bottomText p {
     font-size: 0.5rem;
+    line-height: 1.8em;
   }
   #leftPic,
   #rightPic {
